@@ -1052,6 +1052,7 @@ const (
 	MetaIPNet              = "*ipnet"
 	MetaAPIBan             = "*apiban"
 	MetaActivationInterval = "*ai"
+	MetaRegex              = "*regex"
 
 	MetaNotString             = "*notstring"
 	MetaNotPrefix             = "*notprefix"
@@ -1066,6 +1067,7 @@ const (
 	MetaNotIPNet              = "*notipnet"
 	MetaNotAPIBan             = "*notapiban"
 	MetaNotActivationInterval = "*notai"
+	MetaNotRegex              = "*notregex"
 
 	MetaEC = "*ec"
 )
