@@ -8,7 +8,8 @@ cgrates (1.0) UNRELEASED; urgency=medium
   * [DispatcherS] Added any_subsyste config to control the matching dispatchers
   * [StatS] AverageCallCost and TotalCallCost now returns error for negative Cost field
   * [SessionS] The sessions are no longer terminated on shutdown if the replication_conns are set
-
+  * [FilterS] Added *regex filter
+  
  -- DanB <danb@cgrates.org>  Thu, 4 May 2021 12:05:00 +0200
 
 cgrates (0.11.0) UNRELEASED; urgency=medium
